<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.e.todolist.MainActivity">
    <item
        android:id="@+id/action_create"
        android:orderInCategory="1"
        android:title="@string/action_create"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="2"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="3"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_done"
        android:orderInCategory="4"
        android:title="@string/action_done"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_to_trash"
        android:orderInCategory="5"
        android:title="@string/action_move_trash"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_trash"
        android:orderInCategory="6"
        android:title="@string/action_clear_trash"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore_trash"
        android:orderInCategory="7"
        android:title="@string/action_restore"
        app:showAsAction="never" />
</menu>
